other http frameworks

--- a/migration/guide.mdx
+++ b/migration/guide.mdx
@@ -15,12 +15,12 @@ Before starting your migration, check if your project meets these requirements:
   - [Actix Web](/examples/actix)
   - [Rocket](/examples/rocket)
   - [Loco](/examples/loco)
-  - Other HTTP frameworks (via [custom service](/templates/tutorials/custom-service))
+  - [7+ other HTTP frameworks](/examples/other)
 - Discord bots
 - Telegram bots
 - Web services connecting to RPC nodes
 - Services with scheduled tasks (cronjobs)
-- Other service types (via [custom Service](/templates/tutorials/custom-service))
+- Other service types (via [custom service](/templates/tutorials/custom-service))
 
 ### ⚠️ Other Considerations
 
