--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -51,7 +51,7 @@ Follow the specific guide for your chosen provider to:
 
 <Warning>
     **Important**: After configuring telemetry, you **_must_** redeploy your project for the changes to take effect.
-    Since you've made code changes in Step 1 (adding the OpenTelemetry exporter), you need to deploy the changes using the Shuttle CLI.
+    If you made code changes in Step 1 (enabling runtime's OpenTelemetry exporter), you need to make a new deployment using with `shuttle deploy`.
 </Warning>
 
 ## Next Steps
@@ -64,4 +64,4 @@ Once your telemetry is set up, you can:
 <Note>
     Need help? Check out our [telemetry overview](./overview) for more details about what metrics are available,
     or join our [Discord community](https://discord.gg/shuttle) for support.
-</Note> 
+</Note>
