--- a/guides/migrate-shared-postgres.mdx
+++ b/guides/migrate-shared-postgres.mdx
@@ -23,38 +23,7 @@ sudo apt install postgresql-client
 Shuttle Postgres databases run Postgres version 16, so `psql` versions older than 16 might not work.
 </Warning>
 
-{/*
-## 1. Deploy and provision Shared Postgres on shuttle.dev
-
-Follow [Platform Migration](/platform-update/migration) to deploy your app to **shuttle.dev**, including the provisioning of the database resource.
-
-If you want the restore step to restore both the schema and data, you can temporarily disable migration logic in your app during this phase.
-
-## 2. Upgrade container on shuttle.rs and Shuttle CLI
-
-To use the dump command, your deployer and CLI need to be v0.52.0 or higher.
-
-Upgrade the CLI by following the [upgrading guide](/guides/upgrade).
-
-Restarting the project will upgrade the deployer to the latest version:
-
-```sh
-cargo shuttle project restart
-```
-
-## 3. (Optional) Stop running service on shuttle.rs
-
-If your app is frequently writing to the tables, and you don't want data to go missing after the migration, it is recommended to stop the current deployment while you perform the database maintenance.
-
-```sh
-cargo shuttle stop
-```
-
-<Info>
-If you for any reason need to cancel the migration and start the service, do so by deploying again.
-</Info>
-
-## 4. Dump data from shuttle.rs
+## Dump database to SQL file
 
 Since the Shared Postgres cluster has strict permissions, running `pg_dump` against your connection string is not possible.
 Instead, you can use the `resource dump` command that runs `pg_dump` with `--no-owner --no-privileges` for you.
@@ -67,16 +36,15 @@ The command writes a dump in SQL format to stdout, so you can use it to write to
 
 ```sh
 # dump database into /tmp/dump.sql
-cargo shuttle resource dump database::shared::postgres > /tmp/dump.sql
+shuttle resource dump database::shared::postgres > /tmp/dump.sql
 ```
 
 <Note>
-The max size for the dump is 50 MB. If you get errors about request limits, reach out to us.
+If you get errors about request limits or timeouts, reach out to us for support.
 </Note>
 
 You can inspect the file and edit it to your liking.
 If you already let your schema migrations run in the new db, you could for instance remove the `CREATE TABLE`, `ALTER TABLE` etc, and only keep the table data `COPY` statements and so on.
-*/}
 
 ## Restore data from a SQL file
 
