--- a/guides/migrate-shared-postgres.mdx
+++ b/guides/migrate-shared-postgres.mdx
@@ -4,8 +4,7 @@ description: Migrate Postgres data to shuttle.dev
 icon: dove
 ---
 
-This guide shows how to restore schemas and table data in a Shuttle database.
-Dumping data is a planned feature.
+This guide shows how to dump schemas and table data from a [Shared Postgres](/resources/shuttle-shared-db) database, and restore a dump.
 
 If you encounter issues, feel free to [contact us](/support/support) for help.
 
