--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Started
-icon: rocket
+title: Getting Started with Telemetry
+icon:
 description: Step-by-step guide to setting up telemetry in your Shuttle project
 ---
 
@@ -9,6 +9,7 @@ This guide will walk you through setting up telemetry for your Shuttle project. 
 ## Prerequisites
 
 Before you begin, make sure you have:
+
 1. A Shuttle project deployed
 2. Access to the Shuttle Console
 3. An account with your chosen telemetry provider (e.g. Better Stack)
@@ -26,7 +27,8 @@ The `shuttle-runtime` entry in your project's `Cargo.toml` should now look somet
 ```toml
 shuttle-runtime = { version = "0.56.0", features = ["setup-otel-exporter"] }
 ```
-> **Note:** Your specific entry may not be *identical*, that's OK. The important part is that `"setup-otel-exporter"` appears in the `features` array.
+
+> **Note:** Your specific entry may not be _identical_, that's OK. The important part is that `"setup-otel-exporter"` appears in the `features` array.
 
 ## Step 2: Choose Your Telemetry Provider
 
@@ -36,13 +38,15 @@ Shuttle supports several telemetry providers. Each has its own setup process:
 - More providers coming soon!
 
 <Note>
-    We plan to expand the list of supported third party services.
-    Let us know you thoughts and suggestions on [GitHub](https://github.com/shuttle-hq/shuttle/discussions/1980).
+  We plan to expand the list of supported third party services. Let us know you
+  thoughts and suggestions on
+  [GitHub](https://github.com/shuttle-hq/shuttle/discussions/1980).
 </Note>
 
 ## Step 3: Configure Your Provider
 
 Follow the specific guide for your chosen provider to:
+
 1. Create a telemetry source in your provider's dashboard
 2. Get your provider's connection details (usually an API key and endpoint)
 3. Configure these details in the Shuttle Console
@@ -50,18 +54,22 @@ Follow the specific guide for your chosen provider to:
 ## Step 4: Redeploy Your Project
 
 <Warning>
-    **Important**: After configuring telemetry, you **_must_** redeploy your project for the changes to take effect.
-    If you made code changes in Step 1 (enabling runtime's OpenTelemetry exporter), you need to make a new deployment using with `shuttle deploy`.
+  **Important**: After configuring telemetry, you **_must_** redeploy your
+  project for the changes to take effect. If you made code changes in Step 1
+  (enabling runtime's OpenTelemetry exporter), you need to make a new deployment
+  using with `shuttle deploy`.
 </Warning>
 
 ## Next Steps
 
 Once your telemetry is set up, you can:
+
 - [Add custom metrics](./custom-metrics) to your application
 - Create dashboards in your provider's interface
 - Monitor your application's performance and health
 
 <Note>
-    Need help? Check out our [telemetry overview](./overview) for more details about what metrics are available,
-    or join our [Discord community](https://discord.gg/shuttle) for support.
+  Need help? Check out our [telemetry overview](./overview) for more details
+  about what metrics are available, or join our [Discord
+  community](https://discord.gg/shuttle) for support.
 </Note>
