feat: enhance documentation structure and add key concepts section

--- a/explanation/infrastructure-from-code.mdx
+++ b/explanation/infrastructure-from-code.mdx
@@ -4,6 +4,37 @@ description: "Deep dive into Shuttle's Infrastructure from Code philosophy and h
 icon: "code"
 ---
 
+<CardGroup>
+  <Card
+    title="Quickstart"
+    icon="rocket"
+    href="#quickstart"
+  >
+    Deploy your first docs site in minutes with our step-by-step guide
+  </Card>
+  <Card
+    title="CLI installation"
+    icon="terminal"
+    href="#cli-installation"
+  >
+    Install the CLI to preview and develop your docs locally
+  </Card>
+  <Card
+    title="Web editor"
+    icon="pen-nib"
+    href="#web-editor"
+  >
+    Make quick updates and manage content with our browser-based editor
+  </Card>
+  <Card
+    title="Components"
+    icon="cubes"
+    href="#components"
+  >
+    Build rich, interactive documentation with our ready-to-use components
+  </Card>
+</CardGroup>
+
 ## What is Infrastructure from Code?
 
 Infrastructure from Code (IfC) is Shuttle's foundational approach where infrastructure requirements are expressed directly in your application code through annotations and macros, rather than in separate configuration files or management consoles.
