fix: update description in introduction.md for clarity and accuracy

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome"
-description: "Shuttle is a Rust-native cloud development platform that lets you deploy your app while also taking care of all of your infrastructure."
+description: "Shuttle makes dealing with cloud infrastructure simple and enjoyable so our users can focus on creating great products."
 icon: "hand-wave"
 ---
 
