feat: update installation and quickstart guides, restructure navigation

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -6,10 +6,10 @@ icon: "hand-wave"
 
 <CardGroup>
   <Card
-    title="Get Started"
+    title="Quickstart"
     icon="circle-play"
     color="#3d3"
-    href="/getting-started/installation"
+    href="/getting-started/quickstart"
   >
     Installation and quickstart guide
   </Card>
@@ -19,7 +19,7 @@ icon: "hand-wave"
     href="/examples"
     color="#f8b5F2"
   >
-    Check out some Shuttle tutorials
+   Follow one of our tutorials
   </Card>
   <Card
     title="How-to Guides"
@@ -35,6 +35,6 @@ icon: "hand-wave"
     href="/templates/tutorials"
     color="#a26"
   >
-    Follow one of our tutorials
+    Deploy a ready made app
   </Card>
 </CardGroup>
